fixing some UI alignment

--- a/css/style.css
+++ b/css/style.css
@@ -324,7 +324,7 @@ a:hover {
         display: block;
         
         margin-top: 10px;
-        margin-left: 20px;
+        margin-left: 25px;
         
         width: 145px;
         
